--- a/src/main/resources/org/example/base_view.fxml
+++ b/src/main/resources/org/example/base_view.fxml
@@ -45,6 +45,8 @@
     <VBox fx:id="pendingEventList" AnchorPane.rightAnchor="35" AnchorPane.topAnchor="35" AnchorPane.leftAnchor="485"
           prefHeight="350.0" visible="false" translateZ="10"/>
 
-    <StackPane fx:id="content" prefWidth="650.0" prefHeight="453.0" AnchorPane.topAnchor="45" AnchorPane.rightAnchor="35" AnchorPane.leftAnchor="35">
+    <StackPane fx:id="content" prefWidth="650.0" prefHeight="453.0" 
+               AnchorPane.topAnchor="45" AnchorPane.rightAnchor="35" 
+               AnchorPane.leftAnchor="35" AnchorPane.bottomAnchor="20">
     </StackPane>
 </AnchorPane>
