Remove outdated order creation diagrams and documentation, update the customer homepage UI with new images, and modify the exception architecture diagram.

--- a/src/main/resources/org/example/homepage_Cliente2.fxml
+++ b/src/main/resources/org/example/homepage_Cliente2.fxml
@@ -40,7 +40,7 @@
         <!-- Immagine di sfondo/copertina -->
         <ImageView fitHeight="135" fitWidth="220" preserveRatio="false" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
             <!-- Sostituisci con la tua immagine locale -->
-            <Image url="@images/habibi_comingSOON.png" />
+            <Image url="@images/habibi_nuovo_ordine.png" />
         </ImageView>
 
         <!-- Parte inferiore Card -->
@@ -71,7 +71,7 @@
     <!-- Card 2: Storico Ordini -->
     <AnchorPane prefHeight="200" prefWidth="220" styleClass="card" GridPane.columnIndex="1" GridPane.rowIndex="0">
         <ImageView fitHeight="135" fitWidth="220" preserveRatio="false" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
-            <Image url="@images/HABIBI_SHAWARMA2.png" />
+            <Image url="@images/habibi_storico.png" />
         </ImageView>
 
         <AnchorPane prefHeight="65" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="135">
